# topo-learning

./: .gitignore  README.md  pyproject.toml  topo_learning.ipynb
.github/workflows/: latex.yml
thesis/: .latexindent.yaml  README.md  literatura.bib  main.tex  metadata.tex
thesis/chapters/: dimensionality-reduction.tex  experiments.tex  mapper.tex  nevronske-mreze.tex  pca.tex  tda.tex  uvod.tex  zakljucek.tex
thesis/poglavja/: nevronske_mreze.tex  pca.tex  tda.tex  uvod.tex  zakljucek.tex
thesis/resources/: network-tikz.tex
thesis/resources/tikz/: basic-simplices.tex  nn-activation.tex  nn-bias.tex  nn-layers.tex  nn-test.tex  pca-reconstruction-error.tex  simplicial-complex.tex
topo-learning/: pyproject.toml  topo_learning.ipynb
topo-learning-code/: README.md  pyproject.toml  topo_learning.ipynb
topo-learning-code/.ipynb_checkpoints/: topo_learning-checkpoint.ipynb
