[project]
name = "topo-learning"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9.18",
    "giotto-tda>=0.6.0",
    "gudhi>=3.11.0",
    "ipykernel>=6.29.5",
    "ipython>=8.36.0",
    "jupyter>=1.1.1",
    "kaleido>=1.0.0",
    "kmapper>=2.1.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "umap-learn>=0.5.7",
]
